--- a/toc.html
+++ b/toc.html
@@ -289,7 +289,7 @@ Elmélkedések és ezeket értelmező példák</font></font></p>
 Példa a szűzről, aki kevélységéért elkárhozott</span></font></font></p>
 <p lang="hu-HU" class="western"><font face="Times New Roman, serif"><font size="3" style="font-size: 12pt"><span lang="hu-HU">230
 (Nyt. </span><span lang="hu-HU">XI. </span><span lang="hu-HU">142</span><span lang="hu-HU">):
-Példa a javait elosztogató ember jó haláláról</span></font></font></p>
+Példa a jsit elosztogató ember jó haláláról</span></font></font></p>
 <p lang="hu-HU" class="western"><font face="Times New Roman, serif"><font size="3" style="font-size: 12pt"><span lang="hu-HU">231–23</span><span lang="hu-HU">7</span><span lang="hu-HU">
 (Nyt. </span><span lang="hu-HU">XI. </span><span lang="hu-HU">143</span><span lang="hu-HU">):
 Az önmegismerésről: </span><span lang="hu-HU">elmélkedés és
